--- a/node/public/gakf/static/css/index.css
+++ b/node/public/gakf/static/css/index.css
@@ -121,6 +121,8 @@ input { width: 300px; height: 30px; padding: 2px; border: solid 1px #dadada; mar
 
 ul li { list-style: none; }
 
+.ms-controller, .ms-important { visibility: hidden; }
+
 .page-footer { position: absolute; bottom: 15px; width: 100%; }
 
 .myheading { background: #222; }
