--- a/node/public/gakf/static/sass/_common.scss
+++ b/node/public/gakf/static/sass/_common.scss
@@ -60,4 +60,11 @@
   	background-color:#f97729;
   }
 }
+.tips{
+  padding: 0px 15px;
+  line-height: 20px;
+  color: #B8AFAF;
+  padding-bottom: 20px;
+  font-size:11px;
+}
 
