--- a/node/public/gakf/static/css/index.css
+++ b/node/public/gakf/static/css/index.css
@@ -195,6 +195,8 @@ form em.error { width: 200px; margin-left: 10px; color: red; }
 
 .my-line { border-top: 1px solid #ccc; margin: 10px 0px; }
 
+.my-title { margin: 5px 10px; display: inline-block; }
+
 .list-group-item { line-height: 20px; overflow: hidden; padding: 11px 15px; }
 .list-group-item div { padding: 0px; }
 .list-group-item.selected { background-color: #fddcc8; }
@@ -207,5 +209,9 @@ form em.error { width: 200px; margin-left: 10px; color: red; }
 .title { color: #f99159; font-size: 14px; font-weight: bold; }
 
 .secondCon { border-bottom: 1px solid #ccc; height: 40px; line-height: 40px; }
+
+.list-group { margin-bottom: 10px; }
+
+.list-group-item { margin: -1px; }
 
 /*# sourceMappingURL=index.css.map */
