--- a/node/public/gakf/static/css/index.css
+++ b/node/public/gakf/static/css/index.css
@@ -214,4 +214,6 @@ form em.error { width: 200px; margin-left: 10px; color: red; }
 
 .list-group-item { margin: -1px; }
 
+#commesCom { position: absolute; top: 50%; left: 50%; width: 200px; height: 80px; margin-left: -100px; margin-top: -40px; text-align: center; }
+
 /*# sourceMappingURL=index.css.map */
