--- a/node/public/gakf/static/css/index.css
+++ b/node/public/gakf/static/css/index.css
@@ -197,6 +197,8 @@ form em.error { width: 200px; margin-left: 10px; color: red; }
 
 .my-title { margin: 5px 10px; display: inline-block; }
 
+.my-textarea1 { border: 0px; text-align: right; }
+
 .list-group-item { line-height: 20px; overflow: hidden; padding: 11px 15px; }
 .list-group-item div { padding: 0px; }
 .list-group-item.selected { background-color: #fddcc8; }
