--- a/node/public/gakf/static/sass/index.scss
+++ b/node/public/gakf/static/sass/index.scss
@@ -175,6 +175,10 @@ form em.error{width: 200px;margin-left: 10px; color: red;}
 	margin: 5px 10px;
 	display: inline-block;
 }
+.my-textarea1{
+	border:0px;
+	text-align:right;
+}
 .list-group-item{
 	line-height:20px;
 	overflow:hidden;
