--- a/node/public/gakf/static/sass/index.scss
+++ b/node/public/gakf/static/sass/index.scss
@@ -229,3 +229,13 @@ form em.error{width: 200px;margin-left: 10px; color: red;}
 	  margin-top: -40px;
 	  text-align:center;
 }
+.ads{
+	position:fixed;
+	bottom:0px;
+	border:1px solid #ccc;
+	width:100%;
+	height:50px;
+	background:#fff;
+	line-height:50px;
+	z-index:9999;
+}
