--- a/node/public/gakf/static/css/index.css
+++ b/node/public/gakf/static/css/index.css
@@ -89,7 +89,7 @@
 .tag.greentag { background-color: #0acd00; }
 .tag.yellowtag { background-color: #f97729; }
 
-.tips { padding: 0px 15px; line-height: 20px; color: #B8AFAF; padding-bottom: 20px; font-size: 11px; }
+.tips { padding: 0px 15px; line-height: 20px; color: #B8AFAF; padding-bottom: 20px; font-size: 11px; word-wrap: break-word; }
 
 /* Reset */
 html, body, div, span, applet, object, iframe, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, button, table, caption, tbody, tfoot, thead, tr, th, td, h1, h2, h3 { margin: 0; padding: 0; border: none; outline: 0; vertical-align: baseline; background: transparent; color: #171717; }
