--- a/node/public/gakf/static/css/index.css
+++ b/node/public/gakf/static/css/index.css
@@ -220,4 +220,8 @@ form em.error { width: 200px; margin-left: 10px; color: red; }
 
 .ads { position: fixed; bottom: 0px; border: 1px solid #ccc; width: 100%; height: 50px; background: #fff; line-height: 50px; z-index: 9999; }
 
+.score { color: #f18e35; padding: 10px; }
+
+.score span { color: #f18e35; }
+
 /*# sourceMappingURL=index.css.map */
