--- a/node/public/gakf/static/sass/index.scss
+++ b/node/public/gakf/static/sass/index.scss
@@ -239,3 +239,10 @@ form em.error{width: 200px;margin-left: 10px; color: red;}
 	line-height:50px;
 	z-index:9999;
 }
+.score{
+	color:#f18e35;
+	padding: 10px;
+}
+.score span{
+	color: #f18e35;
+}
