--- a/node/public/gakf/static/sass/index.scss
+++ b/node/public/gakf/static/sass/index.scss
@@ -219,7 +219,7 @@ form em.error{width: 200px;margin-left: 10px; color: red;}
 	margin:-1px;
 }
 #commesCom{
-	  position: absolute;
+	  position: fixed;
 	  top: 50%;
 	  left: 50%;
 	  width: 200px;
