--- a/node/public/gakf/static/css/index.css
+++ b/node/public/gakf/static/css/index.css
@@ -123,6 +123,8 @@ input { width: 300px; height: 30px; padding: 2px; border: solid 1px #dadada; mar
 
 ul li { list-style: none; }
 
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; }
+
 .ms-controller, .ms-important { visibility: hidden; }
 
 .page-footer { position: absolute; bottom: 15px; width: 100%; }
@@ -216,7 +218,7 @@ form em.error { width: 200px; margin-left: 10px; color: red; }
 
 .list-group-item { margin: -1px; }
 
-#commesCom { position: absolute; top: 50%; left: 50%; width: 200px; height: 80px; margin-left: -100px; margin-top: -40px; text-align: center; }
+#commesCom { position: fixed; top: 50%; left: 50%; width: 200px; height: 80px; margin-left: -100px; margin-top: -40px; text-align: center; }
 
 .ads { position: fixed; bottom: 0px; border: 1px solid #ccc; width: 100%; height: 50px; background: #fff; line-height: 50px; z-index: 9999; }
 
