--- a/node/public/gakf/static/sass/index.scss
+++ b/node/public/gakf/static/sass/index.scss
@@ -174,6 +174,7 @@ form em.error{width: 200px;margin-left: 10px; color: red;}
 .my-title{
 	margin: 5px 10px;
 	display: inline-block;
+	line-height:20px;
 }
 .my-textarea1{
 	border:0px;
