--- a/node/public/gakf/static/css/index.css
+++ b/node/public/gakf/static/css/index.css
@@ -221,6 +221,7 @@ form em.error { width: 200px; margin-left: 10px; color: red; }
 #commesCom { position: fixed; top: 50%; left: 50%; width: 200px; height: 80px; margin-left: -100px; margin-top: -40px; text-align: center; }
 
 .ads { position: fixed; bottom: 0px; border: 1px solid #ccc; width: 100%; height: 50px; background: #fff; line-height: 50px; z-index: 9999; }
+.ads img { width: 100%; }
 
 .score { color: #f18e35; padding: 10px; }
 
