--- a/node/public/gakf/static/sass/index.scss
+++ b/node/public/gakf/static/sass/index.scss
@@ -238,6 +238,9 @@ form em.error{width: 200px;margin-left: 10px; color: red;}
 	background:#fff;
 	line-height:50px;
 	z-index:9999;
+	& img{
+		width: 100%;
+	}
 }
 .score{
 	color:#f18e35;
